--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,12 @@
   "plugins": [
     "transform-function-bind",
     "transform-react-jsx",
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "style": true
+      }
+    ]
   ]
 }
