--- a/package.json
+++ b/package.json
@@ -26,16 +26,20 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.42",
+    "ajv": "^6.4.0",
+    "antd": "^3.5.0",
     "auth0-lock": "^11.5.2",
     "aws-sam-local": "^0.2.8",
     "aws-serverless-express": "^3.1.3",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.7.0",
     "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "cache-loader": "^1.2.0",
+    "css-loader": "^0.28.11",
     "csv": "^3.0.2",
     "date-fns": "^1.29.0",
     "db-migrate": "^0.10.7",
@@ -55,6 +59,8 @@
     "html-webpack-plugin": "^2.30.1",
     "jsonwebtoken": "^8.2.1",
     "jwk-to-pem": "^2.0.0",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "material-ui": "^1.0.0-beta.41",
     "pg": "^7.4.1",
     "ramda": "^0.25.0",
@@ -62,6 +68,7 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.2.1",
+    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "uuid": "^3.2.1",
     "webpack": "^3.10.0",
