--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "postinstall": "webpack & node .env.js",
     "posttest": "eslint --fix --ext .js,.jsx . && git diff --exit-code",
     "psql": "docker run -it --rm --network=memodiary_default --env-file .env --mount type=bind,src=$PWD,dst=/nsnf -w /nsnf postgres:9.6-alpine psql",
+    "sam": "node_modules/aws-sam-local/node_modules/.bin/sam",
     "start": "npm run start:db && npm run start:api & webpack -w",
-    "start:api": "node .env.js && sam local start-api --docker-network=memodiary_default --env-vars .env.json",
+    "start:api": "node .env.js && npm run sam -- local start-api --docker-network=memodiary_default --env-vars .env.json",
     "start:db": "docker-compose up -d",
     "stats": "npm run stats:client & npm run stats:server",
     "stats:client": "webpack --config webpack.config.client.js --profile --json > stats.client.json",
@@ -29,7 +30,7 @@
     "ajv": "^6.4.0",
     "antd": "^3.5.0",
     "auth0-lock": "^11.5.2",
-    "aws-sam-local": "^0.2.8",
+    "aws-sam-local": "^0.2.11",
     "aws-serverless-express": "^3.1.3",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
@@ -55,14 +56,14 @@
     "eslint-plugin-standard": "^3.0.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.2",
-    "html-webpack-inline-source-plugin": "0.0.9",
+    "html-webpack-inline-source-plugin": "0.0.10",
     "html-webpack-plugin": "^3.2.0",
     "jsonwebtoken": "^8.2.1",
     "jwk-to-pem": "^2.0.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "material-ui": "^1.0.0-beta.45",
-    "pg": "^7.4.2",
+    "pg": "^7.4.3",
     "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -71,7 +72,10 @@
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "uuid": "^3.2.1",
-    "webpack": "^3.10.0",
+    "webpack": "^4.8.1",
     "webpack-bundle-analyzer": "^2.10.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^2.1.3"
   }
 }
